# Auth_And_Pay_Services

./: .env.sample  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  schemas.py
database/: db.py  db_depends.py
migrations/: env.py
migrations/versions/: 187b484a84ca_init_migration.py  30dba178fa3c_migration_3.py  3a4976366134_migration_2.py  c297fbf78624_init_migration.py
models/: accounts.py  transactions.py  users.py
routers/: auth.py  transactions.py  users.py
routers/services/: test_payment.py  validators.py  webhook.py
